My contributions for today

--- a/fr_FR/biomes.lang
+++ b/fr_FR/biomes.lang
@@ -2,6 +2,7 @@ biome.rainforest=Forêt pluviale
 biome.swampland=Marécage
 biome.seasonal_forest=Forêt saisonnière
 biome.forest=Forêt
+biome.forest.dry=Forêt sèche
 biome.grasslands=Grandes plaines
 biome.outback=Cambrousse
 biome.shrubland=Plaine arbustive
@@ -19,3 +20,5 @@ biome.retro=Retro
 biome.hell=Hell
 biome.swampland.muddy=Marécage boueux
 biome.outback.grassy=Cambrousse herbeuse
+biome.caatinga=Caatinga
+biome.caatinga.plains=Plaines de caatinga
