--- a/fr_FR/guidebook.lang
+++ b/fr_FR/guidebook.lang
@@ -7,41 +7,41 @@ guidebook.section.blast_furnace=Fonte
 guidebook.section.trommel=Recyclage
 guidebook.section.search=Rechercher
 
-guidebook.section.mob.health=Vie:
-guidebook.section.mob.score=Score: %s
-guidebook.section.mob.damage=Dégat: %s
-guidebook.section.mob.drops=Butin:
+guidebook.section.mob.health=Vie :
+guidebook.section.mob.score=Score : %s
+guidebook.section.mob.damage=Dégat : %s
+guidebook.section.mob.drops=Butin :
 
 guidebook.section.mob.undiscovered=Cette créature n'a pas été découverte.
 guidebook.section.mob.pig.name=Cochon
-guidebook.section.mob.pig.desc=Pigs are a valuable source of food, and appear frequently in the wild.\nThey can be found in most biomes.
+guidebook.section.mob.pig.desc=Les cochons sont une source précieuse de nourriture et apparaissent fréquemment dans la nature.\nOn les trouve dans la plupart des biomes.
 guidebook.section.mob.sheep.name=Mouton
-guidebook.section.mob.sheep.desc=Sheep provide wool, which is essential for many purposes.\nThey can be found in most biomes.
+guidebook.section.mob.sheep.desc=Les moutons fournissent de la laine, essentielle à de nombreux usages.\nOn les trouve dans la plupart des biomes.
 guidebook.section.mob.cow.name=Vache
-guidebook.section.mob.cow.desc=Cows are useful as a source of leather, which can be used to create armor.\nThey can be found in most biomes.
+guidebook.section.mob.cow.desc=Les vaches sont utiles comme source de cuir, qui peut être utilisé pour créer des armures.\nOn les trouve dans la plupart des biomes.
 guidebook.section.mob.chicken.name=Poulet
-guidebook.section.mob.chicken.desc=Chickens are a source of feathers, which are useful for making arrows.\nThey can be found in most biomes.
+guidebook.section.mob.chicken.desc=Les poulets sont une source de plumes, utiles pour fabriquer des flèches.\nOn les trouve dans la plupart des biomes.
 guidebook.section.mob.squid.name=Poulpe
-guidebook.section.mob.squid.desc=Squids are a source of ink sacs, which can be used to dye wool.\nThey can be found in lakes and oceans.
+guidebook.section.mob.squid.desc=Les poulpes sont une source de sacs d'encre, qui peuvent être utilisés pour teindre la laine.\nOn les trouve dans les lacs et les océans.
 guidebook.section.mob.wolf.name=Loup
-guidebook.section.mob.wolf.desc=Wolves are a passive mob that can be tamed using bones.\nThey can be found in colder biomes, such as taigas and boreal forests.
+guidebook.section.mob.wolf.desc=Les loups sont un mob passif qui peut être apprivoisé à l'aide d'os.\nOn les trouve dans les biomes les plus froids, tels que les taïgas et les forêts boréales.
 guidebook.section.mob.firefly_cluster.name=Luciole
-guidebook.section.mob.firefly_cluster.desc=Fireflies appear as a shimmering cloud of light, and can be caught in jars to create lanterns.\nThey can be found in many biomes.
+guidebook.section.mob.firefly_cluster.desc=Les lucioles apparaissent comme un nuage de lumière scintillant et peuvent être capturées dans des bocaux pour créer des lanternes.\nOn les trouve dans de nombreux biomes.
 guidebook.section.mob.zombie.name=Zombie
-guidebook.section.mob.zombie.desc=Zombies are a common enemy that appear at night and in darkness. They pack a strong punch, so be careful!
+guidebook.section.mob.zombie.desc=Les zombies sont des ennemis communs qui apparaissent la nuit et dans l'obscurité. Ils sont très puissants, alors soyez prudents !
 guidebook.section.mob.creeper.name=Creeper
-guidebook.section.mob.creeper.desc=Creepers are infamous creatures that explode when they get close to you. They appear at night and in darkness.
+guidebook.section.mob.creeper.desc=Les Creepers sont d'infâmes créatures qui explosent lorsqu'elles s'approchent de vous. Ils apparaissent la nuit et dans l'obscurité.
 guidebook.section.mob.skeleton.name=Squelette
-guidebook.section.mob.skeleton.desc=Skeletons provide ranged support for other creatures, and can be dangerous - finding cover is recommended. They appear at night and in darkness.
+guidebook.section.mob.skeleton.desc=Les squelettes apportent un soutien à distance aux autres créatures et peuvent être dangereux - il est recommandé de se mettre à l'abri. Ils apparaissent la nuit et dans l'obscurité.
 guidebook.section.mob.spider.name=Araignée
-guidebook.section.mob.spider.desc=Spiders are large, fast, and can climb walls. They are a common enemy that appear at night and in darkness.
+guidebook.section.mob.spider.desc=Les araignées sont grandes, rapides et peuvent grimper aux murs. Elles sont un ennemi commun qui apparaît la nuit et dans l'obscurité.
 guidebook.section.mob.slime.name=Slime
-guidebook.section.mob.slime.desc=Slimes appear at the very bottom of the world, and can be dangerous in large numbers. They are capable of splitting into smaller slimes.
+guidebook.section.mob.slime.desc=Les slimes apparaissent tout au fond du monde et peuvent être dangereux en grand nombre. Ils sont capables de se diviser en plus petits slimes.
 guidebook.section.mob.ghast.name=Ghast
-guidebook.section.mob.ghast.desc=Ghasts are large, flying creatures that shoot fireballs at you. They are found in the Nether.
+guidebook.section.mob.ghast.desc=Les ghasts sont de grandes créatures volantes qui vous lancent des boules de feu. On les trouve dans le Nether.
 guidebook.section.mob.zombie_pigman.name=Zombie Cochon
-guidebook.section.mob.zombie_pigman.desc=Zombie pigmen are a common enemy in the Nether. They are neutral unless provoked.
-guidebook.section.mob.snowman.name=Zombie des neiges
-guidebook.section.mob.snowman.desc=Snowmen are a kind of zombie that appear only in the coldest places of the world, and throw snowballs to deter attackers.
-guidebook.section.mob.armored_zombie.name=Zombie blindé
-guidebook.section.mob.armored_zombie.desc=A deadlier variant of the regular zombie, armored zombies wear chainmail and occasionally wield a sword.
+guidebook.section.mob.zombie_pigman.desc=Les zombies cochons sont un ennemi commun dans le Nether. Ils sont neutres à moins d'être provoqués.
+guidebook.section.mob.snowman.name=Bonhommes de neige
+guidebook.section.mob.snowman.desc=Les bonshommes de neige sont des sortes de zombies qui n'apparaissent que dans les endroits les plus froids du monde et qui lancent des boules de neige pour dissuader les attaquants.
+guidebook.section.mob.armored_zombie.name=Zombie cuirassé
+guidebook.section.mob.armored_zombie.desc=Variante plus mortelle du zombie ordinaire, les zombies cuirassés portent une cotte de mailles et brandissent parfois une épée.
