--- a/fr_FR/item.lang
+++ b/fr_FR/item.lang
@@ -163,7 +163,7 @@ item.food.porkchop.cooked.desc=Viande de porc braisée. Fumer !
 item.painting.name=Tableau
 item.painting.desc=Une belle photo à accrocher au mur.
 item.food.apple.gold.name=Pomme en or
-item.food.apple.gold.desc=Invincible ! Pas de peur !
+item.food.apple.gold.desc=Invincible ! Sans peur !
 item.sign.name=Panneau
 item.sign.desc=Marquez votre terre ou écrivez un message.
 item.door.oak.name=Porte en bois
@@ -180,8 +180,8 @@ item.saddle.name=Selle
 item.saddle.desc=Parfait pour un... cochon ?
 item.door.iron.name=Porte en fer
 item.door.iron.desc=Une porte renforcée qui se déverrouille lorsqu'elle est alimentée.
-item.dust.redstone.name=Poudre rouge
-item.dust.redstone.desc=Une mystérieuse poussière qui semble porter un courant.
+item.dust.redstone.name=Poudre de redstone
+item.dust.redstone.desc=Une mystérieuse poudre qui semble porter un courant.
 item.ammo.snowball.name=Boule de neige
 item.ammo.snowball.desc=Boules de neige à lancer.
 item.boat.name=Bateau
@@ -212,7 +212,7 @@ item.tool.compass.name=Boussole
 item.tool.compass.desc=Il renvoie toujours à la maison.
 item.tool.fishingrod.name=Canne à pêche
 item.tool.fishingrod.desc=Lancez une ligne et attrapez le gros poisson !
-item.tool.clock.name=Horloge
+item.tool.clock.name=Montre
 item.tool.clock.desc=Avez-vous le temps ?
 item.dust.glowstone.name=Poudre de pierre lumineuse
 item.dust.glowstone.desc=Une poussière jaune qui semble émettre de la lumière.
@@ -249,7 +249,7 @@ item.record.dog.desc=§edog
 item.bone.name=Os
 item.bone.desc=Effrayant...
 item.dye.name=Colorant
-item.dye.desc=How did you get this?!
+item.dye.desc=Comment t'as eu ça ?!
 item.dye.black.name=Encre noir
 item.dye.black.desc= Peut être utilisé pour colorer certains blocs en noir.
 item.dye.red.name=Colorant rouge
@@ -285,10 +285,12 @@ item.dye.white.desc=Un repas nourrissant pour les plantes. Peut également être
 item.dust.sugar.name=Sucre
 item.dust.sugar.desc=Peut confectionner des friandises.
 item.food.cake.name=Gâteau
-item.food.cake.desc=Ce n'est pas empoisonné !
+item.food.cake.desc=N'est pas un mensonge !
+item.food.pumpkin_pie.name=Tarte à la citrouille
+item.food.pumpkin_pie.desc=C'est pas de la tarte !
 item.bed.name=Lit
 item.bed.desc=Faire une sieste pendant la nuit.
-item.repeater.name=Répéteur de poudre rouge
+item.repeater.name=Répéteur de redstone
 item.repeater.desc=Retarde un signal de redstone.
 item.map.name=Carte
 item.map.desc=Cartographiez vos terres !
@@ -340,14 +342,14 @@ item.candle.soulwax.desc=A waxy brown candle that glows with an unnatural light.
 
 item.jar.name=Bocal
 item.jar.desc=Un pot en verre.
-item.lantern.firefly.green.name=Lanterne de luciole verte
-item.lantern.firefly.green.desc=Un bocal en verre contenant un essaim de lucioles vertes.
-item.lantern.firefly.orange.name=Lanterne de luciole orange
-item.lantern.firefly.orange.desc=Un bocal en verre contenant un essaim de lucioles orange.
-item.lantern.firefly.blue.name=Lanterne de luciole bleue
+item.lantern.firefly.green.name=Lanterne de lucioles vertes
+item.lantern.firefly.green.desc=Un pot en verre contenant un essaim de lucioles vertes.
+item.lantern.firefly.orange.name=Lanterne de lucioles oranges
+item.lantern.firefly.orange.desc=Un pot en verre contenant un essaim de lucioles orange.
+item.lantern.firefly.blue.name=Lanterne de lucioles bleues
 item.lantern.firefly.blue.desc=Un pot en verre contenant un essaim de lucioles bleues.
-item.lantern.firefly.red.name=Lanterne de luciole rouge
-item.lantern.firefly.red.desc=Un bocal en verre contenant un essaim de lucioles rouges.
+item.lantern.firefly.red.name=Lanterne de lucioles rouges
+item.lantern.firefly.red.desc=Un pot en verre contenant un essaim de lucioles rouges.
 
 item.basket.name=Panier
 item.basket.desc=Un récipient en osier pour contenir des objets.
@@ -370,3 +372,47 @@ item.seeds.pumpkin.desc=Pour une tarte à la citrouille sans fin.
 
 item.seat.name=Siège
 item.seat.desc=Asseyez-vous et détendez-vous.
+
+item.door.oak.painted.name=Porte peinte
+item.door.oak.painted.desc=Comment t'as eu ça ?!
+item.door.oak.painted.black.name=Porte en bois noire
+item.door.oak.painted.black.desc=Chaque maison en à besoin.
+item.door.oak.painted.red.name=Porte en bois rouge
+item.door.oak.painted.red.desc=Chaque maison en à besoin.
+item.door.oak.painted.green.name=Porte en bois verte
+item.door.oak.painted.green.desc=Chaque maison en à besoin.
+item.door.oak.painted.brown.name=Porte en bois marron
+item.door.oak.painted.brown.desc=Chaque maison en à besoin.
+item.door.oak.painted.blue.name=Porte en bois bleue
+item.door.oak.painted.blue.desc=Chaque maison en à besoin.
+item.door.oak.painted.purple.name=Porte en bois violette
+item.door.oak.painted.purple.desc=Chaque maison en à besoin.
+item.door.oak.painted.cyan.name=Porte en bois cyan
+item.door.oak.painted.cyan.desc=Chaque maison en à besoin.
+item.door.oak.painted.silver.name=Porte en bois grise claire
+item.door.oak.painted.silver.desc=Chaque maison en à besoin.
+item.door.oak.painted.gray.name=Porte en bois grise
+item.door.oak.painted.gray.desc=Chaque maison en à besoin.
+item.door.oak.painted.pink.name=Porte en bois rose
+item.door.oak.painted.pink.desc=Chaque maison en à besoin.
+item.door.oak.painted.lime.name=Porte en bois verte claire
+item.door.oak.painted.lime.desc=Chaque maison en à besoin.
+item.door.oak.painted.yellow.name=Porte en bois jaune
+item.door.oak.painted.yellow.desc=Chaque maison en à besoin.
+item.door.oak.painted.lightblue.name=Porte en bois bleue claire
+item.door.oak.painted.lightblue.desc=Chaque maison en à besoin.
+item.door.oak.painted.magenta.name=Porte en bois magenta
+item.door.oak.painted.magenta.desc=Chaque maison en à besoin.
+item.door.oak.painted.orange.name=Porte en bois orange
+item.door.oak.painted.orange.desc=Chaque maison en à besoin.
+item.door.oak.painted.white.name=Porte en bois blanche
+item.door.oak.painted.white.desc=Chaque maison en à besoin.
+
+item.door.glass.name=Porte en verre
+item.door.glass.desc=Très esthétique, pas très privé.
+
+item.rope.name=Corde
+item.rope.desc=Assez solide pour pouvoir grimper.
+
+item.wand.monster.name=Baguette d'invocation
+item.wand.monster.desc=Un outil magic qui permet de manifester des entités vivantes.
