--- a/fr_FR/options.lang
+++ b/fr_FR/options.lang
@@ -1,6 +1,10 @@
 options.off=Non
 options.on=Oui
-
+options.title=Options
+options.controls=Controls...
+options.keybinds=Keybinds...
+options.video=Video Settings...
+options.videoTitle=Video Settings
 options.sound.music=Volume de la musique
 options.sound.master=Volume principale
 options.sound.world=Volume du monde
@@ -8,7 +12,6 @@ options.sound.entity=Volume des entitées
 options.sound.cave=Volume des son de grotte
 options.sound.gui=Volume du menu
 options.sound.weather=Volume de la météo
-
 options.invertYMouse=Inverser la souris
 options.mouseSensitivity=Sensibilité
 options.mouseSensitivity.min=*baille*
@@ -25,7 +28,7 @@ options.renderDistance.extreme=Extrême
 options.bobView=Mouvement de tête
 options.ambientOcclusion=Éclairage doux
 options.anaglyph3d=Anaglyphe 3D
-options.limitFramerate=Performance
+options.enableVsync=Activer la synchro. verticale
 options.customFpsLimit.unlimited=Illimité
 options.customFpsLimit=Limite de FPS
 options.difficulty=Difficulté
@@ -43,6 +46,8 @@ options.guiScale.normal=Normal
 options.guiScale.large=Grande
 options.advancedOpengl=OpenGL avancé
 options.treeShadows=Ombrage des feuilles
+options.mods=Packs de textures...
+options.visuals=Visuels...
 options.visualsTitle=Visuels
 options.biomeWater=Biome de l'eau
 options.vignette=Vignette
@@ -50,6 +55,10 @@ options.slimeParticles=Particules de slime des tronçons
 options.3Ditems=Objets 3D
 options.screenPadding=Rembourrage de l'écran
 options.gamma=Gamma
+options.brightness=Luminosité
+options.brightness.min=Sombre
+options.brightness.default=Défaut
+options.brightness.max=Lumineuse
 options.fxaa=FXAA
 options.placementMode=Mode de placement
 options.placementMode.default=Défaut
@@ -60,6 +69,7 @@ options.animations.custom=Customisé
 options.animations.procedural=Procédurale
 options.animations.off=Désactivé
 options.autoHit=Coup automatique
+options.controller=Manette...
 options.controllerSensitivity=Sensibilité
 options.controllerMenuSensitivity=Sensibilité des menus
 options.controllerDeadzoneL=Zone morte (Gauche)
@@ -67,7 +77,7 @@ options.controllerDeadzoneR=Zone morte (Droite)
 options.selectController=Choisi une manette...
 options.interface=Interface...
 options.fpsInOverlay=Afficher les FPS
-options.versionInOverlay=Voir la version
+options.versionInOverlay=Afficher la version
 options.foodHealthRegenOverlay=Voir la régénération de la nourritures
 options.controllerSwapShoulderButtons=Échanger LR R ZR R
 options.controllerSwapAB=Échanger A & B
@@ -77,6 +87,8 @@ options.mipmapType=Type de mipmap
 options.mipmapType.rough=Rude
 options.mipmapType.smooth=Doux
 options.clouds=Nuages
+options.cloudHeight=Hauteure des nuages
+options.cloudHeight.default=Défaut
 options.armorDurabilityOverlay=Voir la durabilité de l'armure
 options.overlayShowCoords=Coordonnées
 options.overlayShowDirection=Direction
@@ -118,6 +130,8 @@ options.renderScale.scale_100=1x
 options.renderScale.scale_200=2x
 options.heatHaze=Brume de chaleur
 options.showCollisionBoxes=Voir les boîtes de collision
+options.showDebugScreen=Show Debug Screen
+options.showFrameTimes=Show Frame Times
 options.showChunkBorders=Voir les bordures des tronçons
 options.pauseOnLostFocus=Mise en pause quand le jeu est mis de côté
 options.smoothCamera=Caméra cinématique
@@ -135,11 +149,21 @@ options.flightSmoothness=Douceur du vol
 options.customAnimations=Animations personnalisées
 options.turnWithVehicle=Tourner avec un véhicule
 options.playServerSounds=Jouer les sons serveur
-
-performance.max=FPS Max
-performance.balanced=Equilibré
-performance.powersaver=Economie d'énergie
-performance.vsync=VSync
+options.lightmapStyle=Style de la texture de lumière
+options.lightmapStyle.gray=Niveaux de gris
+options.lightmapStyle.colorized=Colorée
+options.lightmapStyle.disabled=Désactivée
+options.customLightmap=Texture de lumière personnalisée
+options.old=Vieux menu
+options.lockCamera=Vérouiller la caméra
+options.disableJInput=Désactiver JInput
+options.disableCrashHandler=Disable Crash Handler
+options.disableResize=Disable Resize
+options.startInFullscreen=Start In Fullscreen
+options.disableShaders=Disable Shaders
+options.loadAllSounds=Load All Sounds
+options.allowSoundOverrides=Allow Sound Overrides
+options.downloadSoundfiles=Download Sound Files
 
 options.tooltipStyle.default=Défaut
 options.tooltipStyle.modern=Moderne
@@ -208,3 +232,18 @@ key.toggleDebug=Afficher le Debug
 key.toggleOverlay=Basculer l'Overlay
 key.sortInventory=Trier l'inventaire
 key.disabled=Désactivé
+key.debug.textureAtlas=Afficher l'atlas de textures
+key.debug.reload=Recharger les textures
+key.debug.gamemode=Basculer le mode de jeu
+key.debug.dumptextures=Dump textures
+key.debug.fullbright=Toggle fullbright
+key.debug.lightmap=Cycle lightmaps
+key.debug.collision=Show collision boxes
+key.debug.chunkborders=Show chunk borders
+key.debug.clearchat=Clear Chat
+key.debug.pauseFocus=Pause on lost focus
+key.debug.iteminfo=Show extra item info
+key.debug.reloadchunks=Reload chunks
+key.debug.smoothlighting=Toggle smooth lighting
+key.debug.releasecursor=Release Cursor
+key.debug.shortcuts=Show keyboard shortcuts
