--- a/fr_FR/gui.lang
+++ b/fr_FR/gui.lang
@@ -11,19 +11,28 @@ gui.achievements.label.requires=Nécessite '%1$s'
 gui.add_server.label.title=Ajouter un serveur
 gui.add_server.button.save=Sauvegarder
 gui.add_server.button.cancel=Annuler
-gui.add_server.button.show_ip=Montrer l'IP: %s
+gui.add_server.button.show_ip=Montrer l'IP : %s
 gui.add_server.button.show_ip.on=Oui
 gui.add_server.button.show_ip.off=Non
 gui.add_server.label.server_name=Nom du serveur
 gui.add_server.label.ip_address=Adresse IP
 
-gui.bad_java_arch.label.title=32-bit Java detected!
-gui.bad_java_arch.label.body.1=It looks like you're running Better than Adventure on 32-bit Java.
-gui.bad_java_arch.label.body.2=This can cause problems with memory allocation, including lag spikes
-gui.bad_java_arch.label.body.3=and potentially crashes.
-gui.bad_java_arch.label.body.4=Please consider downloading a 64-bit JRE such as Eclipse Temurin.
+gui.bad_java_arch.label.title=Java 32-bit détecté !
+gui.bad_java_arch.label.body.1=Il semble que vous exécutiez Better than Adventure avec un Java 32-bit.
+gui.bad_java_arch.label.body.2=Cela pourrait causer des problèmes d'allocations de mémoire,
+gui.bad_java_arch.label.body.3=incluant des pics de latence et de potentiels crashs.
+gui.bad_java_arch.label.body.4=Considérez télécharger la version 64-bit, comme Eclipse Temurin.
 gui.bad_java_arch.button.download=Télécharger
 gui.bad_java_arch.button.continue=Continue
+
+gui.no_minecraft.label.title=Minecraft Beta 1.7.3 manquant !
+gui.no_minecraft.label.body.1=Il semble que vous exécutiez Better than Adventure! sans Minecraft Beta 1.7.3.
+gui.no_minecraft.label.body.2=Better than Adventure! doit être installé avec une copie officielle de
+gui.no_minecraft.label.body.3=Minecraft Beta 1.7.3 pour fonctionner correctement.
+gui.no_minecraft.label.body.4=Ce problème survient normalement si vous avez fait une erreur lors de la procédure d'installation.
+gui.no_minecraft.label.body.5=Veuillez consulter le guide d'installation ci-dessous.
+gui.no_minecraft.button.guide=Guide d'installation
+gui.no_minecraft.button.quit=Quitter le jeu
 
 gui.conflict_warning.label.title=Level safe conflict
 gui.conflict_warning.label.body.1=Minecraft detected a conflict in the level save data.
@@ -38,7 +47,7 @@ gui.connect_failed.button.back=Retour au menu principal
 gui.connect_to_ip.button.connect=Connexion
 gui.connect_to_ip.button.cancel=Annuler
 gui.connect_to_ip.label.title=Connexion rapide
-gui.connect_to_ip.label.enter_ip=Entrez l'adresse du serveur:
+gui.connect_to_ip.label.enter_ip=Entrez l'adresse du serveur :
 
 gui.connecting.button.cancel=Annuler
 gui.connecting.label.connecting=Connexion au serveur...
@@ -57,13 +66,23 @@ gui.create_world.label.world_name=Nom
 gui.create_world.label.seed=Graine
 gui.create_world.button.create_new_world=Créer
 gui.create_world.button.cancel=Annuler
-gui.create_world.button.gamemode=Mode: %s
-gui.create_world.button.cheats=Triches: %s
+gui.create_world.button.gamemode=Mode : %s
+gui.create_world.button.cheats=Triches : %s
 gui.create_world.button.cheats.on=Oui
 gui.create_world.button.cheats.off=Non
-gui.create_world.button.world_type=Type de monde: %s
+gui.create_world.button.world_type=Type de monde : %s
 gui.create_world.label.new_world=Nouveau monde
 gui.create_world.label.select_world_type=Sélectionne un type de monde
+
+gui.create_world.label.title=Créer un nouveau monde
+gui.create_world.button.cancel=Annuler
+gui.create_world.button.create_world=Créer le monde
+
+gui.create_world.pages.general.title=Général
+gui.create_world.pages.general.label.world_name=Nom du monde
+gui.create_world.pages.general.label.world_seed=Graine du monde
+gui.create_world.pages.world_settings.title=Options du monde
+gui.create_world.pages.game_rules.title=Règles du jeu
 
 gui.dispenser.label.dispenser=Distributeur
 gui.dispenser.label.inventory=Inventaire
@@ -72,17 +91,17 @@ gui.downloading_terrain.label.title=Téléchargement du terrain
 
 gui.edit_flag.label.inventory=Inventaire
 
-gui.edit_label.label.title=Étiquette:
+gui.edit_label.label.title=Étiquette :
 gui.edit_label.button.done=Terminé
 
-gui.edit_sign.label.title=Panneau:
+gui.edit_sign.label.title=Panneau :
 gui.edit_sign.button.done=Terminé
 
-gui.exception.label.exception_occurred=An exception has occurred!
-gui.exception.label.fatal_error=A fatal error has occurred!
-gui.exception.label.startup_error=Minecraft has failed to start!
-gui.exception.button.copy_error=Copy error
-gui.exception.button.copy_error_and_quit=Copy error and quit
+gui.exception.label.exception_occurred=Une exception s'est produite !
+gui.exception.label.fatal_error=Une erreur fatale s'est produite !
+gui.exception.label.startup_error=Minecraft n'a pas réussi à démarrer !
+gui.exception.button.copy_error=Copier l'erreur
+gui.exception.button.copy_error_and_quit=Copier l'erreur et quitter
 gui.exception.button.back=Retour au menu
 
 gui.furnace.label.furnace=Four
@@ -90,16 +109,17 @@ gui.furnace.blast.label.blast_furnace=Haut fourneau
 gui.furnace.label.inventory=Inventaire
 
 gui.game_over.label.title=Mort !
-gui.game_over.label.score=Score: %s
-gui.game_over.button.respawn=Réapparaître 
+gui.game_over.label.score=Score : %s
+gui.game_over.button.respawn=Réapparaître
+gui.game_over.button.respawn.spectator=Regarder
 gui.game_over.button.title_screen=Menu principal
 
 gui.guidebook.label.title=Encyclopédie
 
-gui.ingame.label.now_playing=Maintenant en jeu: %s
+gui.ingame.label.now_playing=Maintenant en jeu : %s
 
 gui.ingame_menu.label.title=Pause
-gui.ingame_menu.label.score=Score: %s
+gui.ingame_menu.label.score=Score : %s
 gui.ingame_menu.label.saving=Sauvegarde...
 gui.ingame_menu.button.save_and_quit=Quitter et sauvegarder
 gui.ingame_menu.button.disconnect=Déconnexion
@@ -114,19 +134,19 @@ gui.inventory.creative.label.search=Rechercher...
 
 gui.loading.label.generating=Génération du monde...
 gui.loading.label.loading=Chargement du monde...
-gui.loading.label.entering=Entrée dans le monde %s...
-gui.loading.label.leaving=Sortie du monde %s...
+gui.loading.label.entering=Entre dans %s...
+gui.loading.label.leaving=Part de %s...
 
-gui.main_menu.label.splash.jonkadelic_birthday=Bonne anniversaire, Jonkadelic!
-gui.main_menu.label.splash.maggandgeez_birthday=Bonne anniversaire, MaggAndGeez!
-gui.main_menu.label.splash.minecraft_birthday=Bonne anniversaire, Minecraft!
+gui.main_menu.label.splash.jonkadelic_birthday=Bonne anniversaire, Jonkadelic !
+gui.main_menu.label.splash.maggandgeez_birthday=Bonne anniversaire, MaggAndGeez !
+gui.main_menu.label.splash.minecraft_birthday=Bonne anniversaire, Minecraft !
 gui.main_menu.label.splash.bta_birthday=Bonne anniversaire, Better than Adventure!
 gui.main_menu.label.splash.xmas=Joyeux Noël!
 gui.main_menu.label.splash.halloween=Bon Halloween!
 gui.main_menu.label.splash.new_year=Bonne année bonne santé !
 gui.main_menu.label.disclaimer.1=Copyright Mojang Studios. N'est pas un produit officiel.
 gui.main_menu.label.disclaimer.2=N'est pas approuvé ou associé à Microsoft ou Mojang Studio.
-gui.main_menu.label.downloading_resources=Téléchargement des ressources: %s / %s
+gui.main_menu.label.downloading_resources=Téléchargement des ressources : %s / %s
 gui.main_menu.button.singleplayer=Solo
 gui.main_menu.button.multiplayer=Multijoueur
 gui.main_menu.button.multiplayer.disabled=Multijoueur (pas encore prêt!)
@@ -153,14 +173,14 @@ gui.options.label.picking_keybinding=Appuyez sur une touche pour en faire le rac
 gui.options.page.general.title=Général
 gui.options.page.general.button.open_worlds_folder=Ouvrir le dossier des mondes
 gui.options.page.general.button.open_screenshots_folder=Ouvrir le dossier des captures
-gui.options.page.general.button.edit_hud=Modifier l'HUD...
-gui.options.page.general.category.gameplay=Jeu
+gui.options.page.general.button.edit_hud=Modifier l'interface...
+gui.options.page.general.category.gameplay=Jouabilité
 gui.options.page.general.category.user_interface=Interface
 gui.options.page.general.category.miscellaneous=Divers
 
 gui.options.page.audio.title=Musiques et sons
 gui.options.page.audio.category.audio=Audio
-gui.options.page.audio.category.debug=Debug
+gui.options.page.audio.category.debug=Débogage
 
 gui.options.page.video.title=Graphiques
 gui.options.page.video.category.graphics=Graphismes
@@ -183,34 +203,47 @@ gui.options.page.controls.category.miscellaneous=Divers
 
 gui.options.page.texture_packs.title=Pack de textures
 gui.options.page.texture_packs.category.textures=Textures
-gui.options.page.texture_packs.category.texture_packs=Pack de textures
+gui.options.page.texture_packs.category.texture_packs.available=Packs de textures disponibles
+gui.options.page.texture_packs.category.texture_packs.selected=Packs de textures sélectionnés
 gui.options.page.texture_packs.button.open_folder=Ouvrir le dossier
+gui.options.page.texture_packs.button.apply=Appliquer les packs de textures
 gui.options.page.texture_packs.label.no_packs=Pas de pack de texture trouvé :(
 gui.options.page.texture_packs.label.outdated_pack.1=Version du pack trop vielle !
 gui.options.page.texture_packs.label.outdated_pack.2=Ce pack n'a pas été fait pour cette version de BTA!
 
-gui.options.page.language_packs.title=Langues
+gui.options.page.language_packs.title=Pack de langues
 gui.options.page.language_packs.category.language_packs=Langues
 gui.options.page.language_packs.button.open_folder=Ouvrir le dossier
+
+gui.options.page.debug.title=Menu de débogage
+gui.options.page.debug.category.controls=Debug Controls
+gui.options.page.debug.category.utility=Utilitaires
+gui.options.page.debug.category.settings=Paramètres
+gui.options.page.debug.category.test=Tests
+gui.options.page.debug.button.open.model_viewer=Ouvrir le visualiseur de modèle
+gui.options.page.debug.button.open.biome_finder=Ouvrir l'outil de recherche de biomes
+gui.options.page.debug.button.open.datadumper=Run Data Dumper
+gui.options.page.debug.button.crash.soft=Crash Soft
+gui.options.page.debug.button.crash.hard=Crash Hard
 
 gui.options.page.search.title=Rechercher
 
 gui.photo_mode.label.mouse_hint=Cliquez et faites glisser pour déplacer et faire pivoter.
 gui.photo_mode.button.take_screenshot=Capturez
 gui.photo_mode.button.center_camera=Recentrer la caméra
-gui.photo_mode.button.show_player=Montrer le joueur: %s
+gui.photo_mode.button.show_player=Montrer le joueur : %s
 gui.photo_mode.button.show_player.on=Oui
 gui.photo_mode.button.show_player.off=Non
-gui.photo_mode.button.time_of_day=Heure du jour: %s
+gui.photo_mode.button.time_of_day=Heure du jour : %s
 gui.photo_mode.button.time_of_day.default=Défaut
-gui.photo_mode.button.season=Saison: %s
+gui.photo_mode.button.season=Saison : %s
 gui.photo_mode.button.season.default=DÉFAUT
-gui.photo_mode.button.fog=Visibilité: %s
-gui.photo_mode.button.tilt=Inclinaison: %s
+gui.photo_mode.button.fog=Visibilité : %s
+gui.photo_mode.button.tilt=Inclinaison : %s
 gui.photo_mode.button.tilt.default=Défaut
-gui.photo_mode.button.shader=Shader: %s
+gui.photo_mode.button.shader=Shader : %s
 gui.photo_mode.button.shader.none=Aucun
-gui.photo_mode.button.intensity=Intensité: %s
+gui.photo_mode.button.intensity=Intensité : %s
 
 gui.select_server.label.title=Multijoueur
 gui.select_server.label.delete_title=Supprimer un serveur
@@ -229,13 +262,14 @@ gui.select_server.button.delete=Supprimer
 gui.select_server.button.refresh=Actualiser
 gui.select_server.button.cancel=Annuler
 gui.select_server.button.done=Terminé
-gui.select_server.button.show_ip=Montrer l'IP: %s
+gui.select_server.button.show_ip=Montrer l'IP : %s
 gui.select_server.button.show_ip.on=Oui
 gui.select_server.button.show_ip.off=Non
 
 gui.select_world.label.title=Mondes
 gui.select_world.label.world=World %s
 gui.select_world.label.must_be_converted=Dois être convertie !
+gui.select_world.label.dimension_corrupted=Error Dimension Corrupted!
 gui.select_world.label.outdated=Mauvaise version - ne peux pas être convertie (encore!)
 gui.select_world.label.delete_title=Delete World
 gui.select_world.label.delete_confirm.1=Es-tu sûr de vouloir supprimer ce monde ?
@@ -269,3 +303,44 @@ gui.trommel.label.inventory=Inventaire
 gui.hud_designer.button.done=Terminé
 
 gui.pick_monster.label.title=Choisis une créature
+
+gui.model_viewer.slider.variant=Variant : %d
+gui.model_viewer.slider.meta=Méta : %d
+gui.model_viewer.button.tickprogress=Run Tick : %s
+gui.model_viewer.button.rotate=Rotate Labels : %s
+gui.model_viewer.button.reload_textures=Recharger les textures
+
+gui.model_viewer.button.category=Catégorie
+
+model.category.entity.info=Entité : %s
+model.category.entity.name=Entité
+model.category.entity.tnt.slider.fuse=Fuse : %d
+model.category.entity.sheep.slider.color=Couleur : %s
+model.category.entity.painting.slider.motif=Peinture : %s
+model.category.entity.fireflycluster.slider.size=Taille : %d
+model.category.entity.fireflycluster.button.cycle=Couleur : %s
+model.category.entity.item.button.cycle=Cycle Item
+model.category.entity.item.slider.size=Taille : %d
+model.category.entity.sand.button.cycle=Cycle Block
+model.category.entity.creeper.button.charged=Chargé : %s
+model.category.entity.armored_zombie.button.sword=Épée : %s
+model.category.entity.wolf.button.tamed=Apprivoisé : %s
+model.category.entity.wolf.button.sitting=Assis : %s
+model.category.entity.wolf.button.angry=En colère : %s
+model.category.entity.wolf.button.armor=Armure : %s
+model.category.entity.wolf.button.item=Item : %s
+model.category.entity.boat.button.flag=Flag : %s
+model.category.entity.boat.button.wind=Wind : %s degrees
+model.category.entity.slime.slider.size=Slime : %s
+model.category.entity.minecart.button.cycle=Cycle Minecart
+
+model.category.block.name=Block
+model.category.block.info=Block: %s
+model.category.block.basket.slider.fill=Fill : %s
+model.category.block.spawner.button.id=Mob : %s
+
+model.category.particle.name=Particule
+model.category.particle.info=Particule : %s
+model.category.particle.radius.slider=Rayon : %s
+model.category.particle.note.slider=Note : %s
+model.category.particle.block.side=Side : %s
