--- a/fr_FR/gui.lang
+++ b/fr_FR/gui.lang
@@ -137,12 +137,12 @@ gui.loading.label.loading=Chargement du monde...
 gui.loading.label.entering=Entre dans %s...
 gui.loading.label.leaving=Part de %s...
 
-gui.main_menu.label.splash.jonkadelic_birthday=Bonne anniversaire, Jonkadelic !
-gui.main_menu.label.splash.maggandgeez_birthday=Bonne anniversaire, MaggAndGeez !
-gui.main_menu.label.splash.minecraft_birthday=Bonne anniversaire, Minecraft !
-gui.main_menu.label.splash.bta_birthday=Bonne anniversaire, Better than Adventure!
-gui.main_menu.label.splash.xmas=Joyeux Noël!
-gui.main_menu.label.splash.halloween=Bon Halloween!
+gui.main_menu.label.splash.jonkadelic_birthday=Bon anniversaire, Jonkadelic !
+gui.main_menu.label.splash.maggandgeez_birthday=Bon anniversaire, MaggAndGeez !
+gui.main_menu.label.splash.minecraft_birthday=Bon anniversaire, Minecraft !
+gui.main_menu.label.splash.bta_birthday=Bon anniversaire, Better than Adventure!
+gui.main_menu.label.splash.xmas=Joyeux Noël !
+gui.main_menu.label.splash.halloween=Bon Halloween !
 gui.main_menu.label.splash.new_year=Bonne année bonne santé !
 gui.main_menu.label.disclaimer.1=Copyright Mojang Studios. N'est pas un produit officiel.
 gui.main_menu.label.disclaimer.2=N'est pas approuvé ou associé à Microsoft ou Mojang Studio.
