--- a/fr_FR/guidebook.lang
+++ b/fr_FR/guidebook.lang
@@ -30,7 +30,7 @@ guidebook.section.mob.firefly_cluster.desc=Les lucioles apparaissent comme un nu
 guidebook.section.mob.zombie.name=Zombie
 guidebook.section.mob.zombie.desc=Les zombies sont des ennemis communs qui apparaissent la nuit et dans l'obscurité. Ils sont très puissants, alors soyez prudents !
 guidebook.section.mob.creeper.name=Creeper
-guidebook.section.mob.creeper.desc=Les Creepers sont d'infâmes créatures qui explosent lorsqu'elles s'approchent de vous. Ils apparaissent la nuit et dans l'obscurité.
+guidebook.section.mob.creeper.desc=Les creepers sont d'infâmes créatures qui explosent lorsqu'elles s'approchent de vous. Ils apparaissent la nuit et dans l'obscurité.
 guidebook.section.mob.skeleton.name=Squelette
 guidebook.section.mob.skeleton.desc=Les squelettes apportent un soutien à distance aux autres créatures et peuvent être dangereux - il est recommandé de se mettre à l'abri. Ils apparaissent la nuit et dans l'obscurité.
 guidebook.section.mob.spider.name=Araignée
@@ -41,7 +41,7 @@ guidebook.section.mob.ghast.name=Ghast
 guidebook.section.mob.ghast.desc=Les ghasts sont de grandes créatures volantes qui vous lancent des boules de feu. On les trouve dans le Nether.
 guidebook.section.mob.zombie_pigman.name=Zombie Cochon
 guidebook.section.mob.zombie_pigman.desc=Les zombies cochons sont un ennemi commun dans le Nether. Ils sont neutres à moins d'être provoqués.
-guidebook.section.mob.snowman.name=Bonhommes de neige
-guidebook.section.mob.snowman.desc=Les bonshommes de neige sont des sortes de zombies qui n'apparaissent que dans les endroits les plus froids du monde et qui lancent des boules de neige pour dissuader les attaquants.
+guidebook.section.mob.snowman.name=Malhommes de neige
+guidebook.section.mob.snowman.desc=Les malhommes de neige sont des sortes de zombies qui n'apparaissent que dans les endroits les plus froids du monde et qui lancent des boules de neige pour dissuader les attaquants.
 guidebook.section.mob.armored_zombie.name=Zombie cuirassé
 guidebook.section.mob.armored_zombie.desc=Variante plus mortelle du zombie ordinaire, les zombies cuirassés portent une cotte de mailles et brandissent parfois une épée.
