--- a/fr_FR/item.lang
+++ b/fr_FR/item.lang
@@ -206,7 +206,7 @@ item.minecart.chest.name=Chariot avec coffre
 item.minecart.chest.desc=Idéal pour le transport de marchandises sur un réseau ferroviaire.
 item.minecart.furnace.name=Chariot avec four
 item.minecart.furnace.desc=Se pousse vers l'avant lorsqu'il est alimenté en carburant.
-item.egg.chicken.name=Oeuf
+item.egg.chicken.name=Œuf
 item.egg.chicken.desc=Œuf.
 item.tool.compass.name=Boussole
 item.tool.compass.desc=Il renvoie toujours à la maison.
@@ -250,7 +250,7 @@ item.bone.name=Os
 item.bone.desc=Effrayant...
 item.dye.name=Colorant
 item.dye.desc=Comment t'as eu ça ?!
-item.dye.black.name=Encre noir
+item.dye.black.name=Encre noire
 item.dye.black.desc= Peut être utilisé pour colorer certains blocs en noir.
 item.dye.red.name=Colorant rouge
 item.dye.red.desc=Peut être utilisé pour colorer certains blocs en rouge.
@@ -344,7 +344,7 @@ item.jar.name=Bocal
 item.jar.desc=Un pot en verre.
 item.lantern.firefly.green.name=Lanterne de lucioles vertes
 item.lantern.firefly.green.desc=Un pot en verre contenant un essaim de lucioles vertes.
-item.lantern.firefly.orange.name=Lanterne de lucioles oranges
+item.lantern.firefly.orange.name=Lanterne de lucioles orange
 item.lantern.firefly.orange.desc=Un pot en verre contenant un essaim de lucioles orange.
 item.lantern.firefly.blue.name=Lanterne de lucioles bleues
 item.lantern.firefly.blue.desc=Un pot en verre contenant un essaim de lucioles bleues.
@@ -389,17 +389,17 @@ item.door.oak.painted.purple.name=Porte en bois violette
 item.door.oak.painted.purple.desc=Chaque maison en à besoin.
 item.door.oak.painted.cyan.name=Porte en bois cyan
 item.door.oak.painted.cyan.desc=Chaque maison en à besoin.
-item.door.oak.painted.silver.name=Porte en bois grise claire
+item.door.oak.painted.silver.name=Porte en bois gris clair
 item.door.oak.painted.silver.desc=Chaque maison en à besoin.
 item.door.oak.painted.gray.name=Porte en bois grise
 item.door.oak.painted.gray.desc=Chaque maison en à besoin.
 item.door.oak.painted.pink.name=Porte en bois rose
 item.door.oak.painted.pink.desc=Chaque maison en à besoin.
-item.door.oak.painted.lime.name=Porte en bois verte claire
+item.door.oak.painted.lime.name=Porte en bois vert clair
 item.door.oak.painted.lime.desc=Chaque maison en à besoin.
 item.door.oak.painted.yellow.name=Porte en bois jaune
 item.door.oak.painted.yellow.desc=Chaque maison en à besoin.
-item.door.oak.painted.lightblue.name=Porte en bois bleue claire
+item.door.oak.painted.lightblue.name=Porte en bois bleu clair
 item.door.oak.painted.lightblue.desc=Chaque maison en à besoin.
 item.door.oak.painted.magenta.name=Porte en bois magenta
 item.door.oak.painted.magenta.desc=Chaque maison en à besoin.
