--- a/fr_FR/tile.lang
+++ b/fr_FR/tile.lang
@@ -107,7 +107,7 @@ tile.fence.planks.oak.painted.purple.name=Barrière violette
 tile.fence.planks.oak.painted.purple.desc=Une barrière en bois, teintée en violet.
 tile.fence.planks.oak.painted.cyan.name=Barrière cyan
 tile.fence.planks.oak.painted.cyan.desc=Une barrière en bois, teintée en cyan.
-tile.fence.planks.oak.painted.silver.name=Barrière grise claire
+tile.fence.planks.oak.painted.silver.name=Barrière gris clair
 tile.fence.planks.oak.painted.silver.desc=Une barrière en bois, teintée en gris clair.
 tile.fence.planks.oak.painted.gray.name=Barrière grise
 tile.fence.planks.oak.painted.gray.desc=Une barrière en bois, teintée en gris.
@@ -447,7 +447,7 @@ tile.fluid.lava.still.desc=Lava that does not flow when placed.
 tile.log.oak.name=Bûche de chêne
 tile.log.oak.desc=La bûche d'un chêne.
 tile.log.pine.name=Bûche de sapin
-tile.log.pine.desc=La bûche d'un pin.
+tile.log.pine.desc=La bûche d'un sapin.
 tile.log.birch.name=Bûche de bouleau
 tile.log.birch.desc=La bûche d'un bouleau.
 tile.log.cherry.name=Bûche de cerisier
